@@ -16,7 +16,6 @@ import java.nio.file.Files;
 import java.nio.file.LinkOption;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.PosixFilePermission;
 import java.nio.file.attribute.PosixFilePermissions;
@@ -82,7 +81,7 @@ public class FileAccessImpl implements FileAccess {
       } else if (url.startsWith("ftp") || url.startsWith("sftp")) {
         throw new IllegalArgumentException("Unsupported download URL: " + url);
       } else {
-        Path source = Paths.get(url);
+        Path source = Path.of(url);
         if (isFile(source)) {
           // network drive
           copyFileWithProgressBar(source, target);
@@ -358,7 +357,7 @@ public class FileAccessImpl implements FileAccess {
       if (relative) {
         source = targetLink.getParent().relativize(source);
         // to make relative links like this work: dir/link -> dir
-        source = (source.toString().isEmpty()) ? Paths.get(".") : source;
+        source = (source.toString().isEmpty()) ? Path.of(".") : source;
       }
     } else { // source is relative
       if (relative) {
@@ -366,7 +365,7 @@ public class FileAccessImpl implements FileAccess {
         // this ../d1/../d2 to ../d2
         source = targetLink.getParent()
             .relativize(targetLink.resolveSibling(source).toRealPath(LinkOption.NOFOLLOW_LINKS));
-        source = (source.toString().isEmpty()) ? Paths.get(".") : source;
+        source = (source.toString().isEmpty()) ? Path.of(".") : source;
       } else { // !relative
         try {
           source = targetLink.resolveSibling(source).toRealPath(LinkOption.NOFOLLOW_LINKS);
@@ -532,7 +531,7 @@ public class FileAccessImpl implements FileAccess {
           permissionStr = generatePermissionString(tarMode);
         }
 
-        Path entryName = Paths.get(entry.getName());
+        Path entryName = Path.of(entry.getName());
         Path entryPath = targetDir.resolve(entryName).toAbsolutePath();
         if (!entryPath.startsWith(targetDir)) {
           throw new IOException("Preventing path traversal attack from " + entryName + " to " + entryPath);
@@ -544,7 +543,7 @@ public class FileAccessImpl implements FileAccess {
           mkdirs(entryPath.getParent());
           Files.copy(ais, entryPath);
         }
-        if (isTar) {
+        if (isTar && !this.context.getSystemInfo().isWindows()) {
           Set<PosixFilePermission> permissions = PosixFilePermissions.fromString(permissionStr);
           Files.setPosixFilePermissions(entryPath, permissions);
         }
